This commit adds map.html and changes the the CSS.style page changing map.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,6 +58,7 @@ p {
 	padding: 0.5em;
 	border: 2.5px solid gray;
 	background-color: #e3e9f2;
+
 }
 .aboutMeBox{
 	padding: 0.5em;
@@ -74,8 +75,13 @@ p {
 .contact_information_css{
 	margin: 3em;
 	background-color: #e3e9f2;
+	
 }
-
+#map{
+	padding: 0.5em;
+	border: 2.5px solid gray;
+	background-color: #e3e9f2;	
+}
 
 footer{
   background-color: #5fdec3;
